--- a/NCloud/NCloud/wwwroot/css/site.css
+++ b/NCloud/NCloud/wwwroot/css/site.css
@@ -79,9 +79,9 @@ details[open] summary:before {
     height:400px;
 }
 
-.separator{
+.separator {
     border: 3px solid black;
-  
+}
 .navwidth {
     width: 15%;
 }
