--- a/NCloud/NCloud/Views/Account/Login.cshtml
+++ b/NCloud/NCloud/Views/Account/Login.cshtml
@@ -1,29 +1,44 @@
 ﻿@model NCloud.ViewModels.LoginViewModel
 @{
-	ViewData["Title"] = "Login";
+    ViewData["Title"] = "Login";
 }
 
-<h2>Login</h2>
-
-<div class="row">
-	<div class="col-md-5">
-		<form asp-controller="Account" asp-action="Login" asp-route-returnUrl="@ViewBag.ReturnUrl" method="post">
-			<div asp-validation-summary="All" class="text-danger"></div>
-			<div class="form-group">
-				<label asp-for="UserName"></label>
-				<input asp-for="UserName" class="form-control" />
-				<span asp-validation-for="UserName" class="text-danger"></span>
-			</div>
-			<div class="form-group">
-				<label asp-for="Password"></label>
-				<input type="password" asp-for="Password" class="form-control" />
-				<span asp-validation-for="Password" class="text-danger"></span>
-			</div><br />
-			<button class="btn btn-primary" type="submit">Login</button>
-		</form>
-	</div>
+<div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+            <div class="card bg-dark text-white" style="border-radius: 1rem;">
+                <div class="card-body p-5 text-center">
+                    <form asp-controller="Account" asp-action="Login" asp-route-returnUrl="@ViewBag.ReturnUrl">
+                        <div class="mb-md-5 mt-md-4 pb-5">
+                            <img src="~/utilities/cloud_logo.png" width="200" />
+                            <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
+                            <p class="text-white-50 mb-5">Please enter your login and password!</p>
+                            <div class="form-outline form-white mb-4">
+                                <label class="form-label" asp-for="UserName"></label>
+                                <input asp-for="UserName" id="typeEmailX" class="form-control form-control-lg" />
+                                <span asp-validation-for="UserName" class="text-danger"></span>
+                            </div>
+                            <div class="form-outline form-white mb-4">
+                                <label class="form-label" asp-for="Password">Password</label>
+                                <input type="password" asp-for="Password" id="typePasswordX" class="form-control form-control-lg" />
+                                <span asp-validation-for="Password" class="text-danger"></span>
+                            </div>
+                            <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p>
+                            <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
+                        </div>
+                        <div>
+                            <p class="mb-0">
+                                Don't have an account? <a asp-controller="Account" asp-action="Register" class="text-white-50 fw-bold">Sign Up</a>
+                            </p>
+                        </div>
+                        <div asp-validation-summary="All" class="text-danger"></div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 @section Scripts {
-	@await Html.PartialAsync("_ValidationScriptsPartial")
+    @await Html.PartialAsync("_ValidationScriptsPartial")
 }
