--- a/NCloud/NCloud/Views/Account/Login.cshtml
+++ b/NCloud/NCloud/Views/Account/Login.cshtml
@@ -7,19 +7,20 @@
     <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-12 col-md-8 col-lg-6 col-xl-5">
             <div class="card bg-dark text-white" style="border-radius: 1rem;">
-                <div class="card-body p-5 text-center">
+                <div class="card-body px-5 pt-3 pb-5 text-center">
                     <form asp-controller="Account" asp-action="Login" asp-route-returnUrl="@ViewBag.ReturnUrl">
+                        <div asp-validation-summary="All" class="text-danger"></div>
                         <div class="mb-md-5 mt-md-4 pb-5">
-                            <img src="~/utilities/cloud_logo.png" width="200" />
+                            <img src="~/utilities/cloud_logo.png" width="200" class="ms-2" />
                             <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
-                            <p class="text-white-50 mb-5">Please enter your login and password!</p>
+                            <p class="text-white-50 mb-5">Please enter your Username and Password!</p>
                             <div class="form-outline form-white mb-4">
                                 <label class="form-label" asp-for="UserName"></label>
                                 <input asp-for="UserName" id="typeEmailX" class="form-control form-control-lg" />
                                 <span asp-validation-for="UserName" class="text-danger"></span>
                             </div>
                             <div class="form-outline form-white mb-4">
-                                <label class="form-label" asp-for="Password">Password</label>
+                                <label class="form-label" asp-for="Password"></label>
                                 <input type="password" asp-for="Password" id="typePasswordX" class="form-control form-control-lg" />
                                 <span asp-validation-for="Password" class="text-danger"></span>
                             </div>
@@ -31,7 +32,6 @@
                                 Don't have an account? <a asp-controller="Account" asp-action="Register" class="text-white-50 fw-bold">Sign Up</a>
                             </p>
                         </div>
-                        <div asp-validation-summary="All" class="text-danger"></div>
                     </form>
                 </div>
             </div>
