--- a/NCloud/NCloud/Views/Account/Register.cshtml
+++ b/NCloud/NCloud/Views/Account/Register.cshtml
@@ -4,35 +4,53 @@
     ViewBag.Title = "Registration";
 }
 
-<h2>@ViewBag.Title</h2>
-
-<div class="row">
-    <div class="col-md-5">
-        <form asp-controller="Account" asp-action="Register" asp-route-returnUrl="@ViewBag.ReturnUrl" method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="FullName"></label>
-                <input asp-for="FullName" class="form-control" />
-                <span asp-validation-for="FullName" class="text-danger"></span>
+<div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+            <div class="card bg-dark text-white" style="border-radius: 1rem;">
+                <div class="card-body px-5 pt-3 pb-5 text-center">
+                    <form asp-controller="Account" asp-action="Register" asp-route-returnUrl="@ViewBag.ReturnUrl">
+                        <div class="mb-md-5 mt-md-4 pb-5">
+                            <img src="~/utilities/cloud_logo.png" width="200" class="ms-2"/>
+                            <h2 class="fw-bold mb-2 text-uppercase">Registration</h2>
+                            <p class="text-white-50 mb-5">Please enter the required information!</p>
+                            <div asp-validation-summary="All" class="text-danger"></div>
+                            <div class="form-outline form-white mb-4">
+                                <label asp-for="FullName"></label>
+                                <input asp-for="FullName" class="form-control form-control-lg" />
+                                <span asp-validation-for="FullName" class="text-danger"></span>
+                            </div>
+                            <div class="form-outline form-white mb-4">
+                                <label asp-for="UserName"></label>
+                                <input asp-for="UserName" class="form-control form-control-lg" />
+                                <span asp-validation-for="UserName" class="text-danger"></span>
+                            </div>
+                            <div class="form-outline form-white mb-4">
+                                <label asp-for="Email"></label>
+                                <input asp-for="Email" class="form-control form-control-lg" />
+                                <span asp-validation-for="Email" class="text-danger"></span>
+                            </div>
+                            <div class="form-outline form-white mb-4">
+                                <label asp-for="Password"></label>
+                                <input type="password" asp-for="Password" class="form-control form-control-lg" />
+                                <span asp-validation-for="Password" class="text-danger"></span>
+                            </div>
+                            <div class="form-outline form-white mb-4">
+                                <label asp-for="PasswordRepeat"></label>
+                                <input type="password" asp-for="PasswordRepeat" class="form-control form-control-lg" />
+                                <span asp-validation-for="PasswordRepeat" class="text-danger"></span>
+                            </div>
+                            <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
+                        </div>
+                        <div>
+                            <p class="mb-0">
+                                Already have an account? <a asp-controller="Account" asp-action="Login" class="text-white-50 fw-bold">Login</a>
+                            </p>
+                        </div>
+                    </form>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="UserName"></label>
-                <input asp-for="UserName" class="form-control" />
-                <span asp-validation-for="UserName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password"></label>
-                <input type="password" asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PasswordRepeat"></label>
-                <input type="password" asp-for="PasswordRepeat" class="form-control" />
-                <span asp-validation-for="PasswordRepeat" class="text-danger"></span>
-            </div><br />
-
-            <button class="btn btn-primary" type="submit">Registration</button>
-        </form>
+        </div>
     </div>
 </div>
 
