--- a/NCloud/NCloud/Views/Shared/_Layout.cshtml
+++ b/NCloud/NCloud/Views/Shared/_Layout.cshtml
@@ -8,18 +8,12 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/NCloud.styles.css" asp-append-version="true" />
 </head>
-<body class="">
+<body class="background-color">
     <div class="">
         <main role="main" class="">
             @RenderBody()
         </main>
     </div>
-
-    <footer class="border-top footer text-muted bg-secondary">
-@*        <div class="container text-dark">
-            &copy; 2023 - NCloud - <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-        </div>*@
-    </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
