--- a/NCloud/NCloud/wwwroot/css/site.css
+++ b/NCloud/NCloud/wwwroot/css/site.css
@@ -93,3 +93,7 @@ details[open] summary:before {
 #menu {
     margin-top: 50%;
 }
+
+.background-color {
+    background: linear-gradient(105.7deg, rgb(0, 238, 179) 23.2%, rgb(49, 100, 255) 100.5%);
+}
