--- a/NCloud/NCloud/Views/_ViewImports.cshtml
+++ b/NCloud/NCloud/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using NCloud.Models
 @using NCloud.ViewModels
 @using NCloud.Views.Shared.Components
+@addTagHelper *, DNTCaptcha.Core
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
