--- a/NCloud/NCloud/Views/_ViewStart.cshtml
+++ b/NCloud/NCloud/Views/_ViewStart.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    if (ViewContext.RouteData.Values["controller"] != null && ViewContext.RouteData.Values["controller"]!.ToString() == "Account")
+    if (ViewContext.RouteData.Values["controller"] != null && (ViewContext.RouteData.Values["controller"]!.ToString() == "Account" || ViewContext.RouteData.Values["controller"]!.ToString() == "Home"))
     {
         Layout = "_Layout";
     }
