--- a/NCloud/NCloud/Views/Account/Index.cshtml
+++ b/NCloud/NCloud/Views/Account/Index.cshtml
@@ -1,12 +1,48 @@
 ﻿@model AccountViewModel
 
-<h1>Your Profile Page</h1>
-<div class="d-flex justify-content-center m-3">
-    <img src="/utilities/person-circle.svg" alt="profile_icon" width="100" height="100" class="rounded-circle m-1">
-</div>
-<div class="d-flex justify-content-center m-3 rounded-2 border border-dark">
-    <b>Username:</b><p>@Model.UserName</p>
-</div>
-<div class="d-flex justify-content-end m-3">
-    <a class="btn btn-danger" asp-action="Logout" asp-controller="Account">Logout</a>
+<div class="page-content page-container" id="page-content">
+    <div class="padding">
+        <div class="row container d-flex justify-content-center">
+            <div class="col-xl-6 col-md-12">
+                <div class="card user-card-full">
+                    <div class="row m-l-0 m-r-0">
+                        <div class="col-sm-4 background-color user-profile">
+                            <div class="card-block text-center text-white">
+                                <div class="m-b-25">
+                                    <img src="/utilities/person-circle.svg" class="img-radius" alt="User-Profile-Image" width="100" height="100">
+                                </div>
+                                <h6 class="f-w-600 border border-3 border-light rounded-3 py-2">@Model.Fullname</h6>
+                            </div>
+                        </div>
+                        <div class="col-sm-8 bg-dark text-white">
+                            <div class="card-block">
+                                <h6 class="m-b-20 p-b-5 b-b-default f-w-600">Information</h6>
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <p class="m-b-10 f-w-600">Username</p>
+                                        <h6 class="text-muted f-w-400">@Model.UserName</h6>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <p class="m-b-10 f-w-600">Email</p>
+                                        <h6 class="text-muted f-w-400">@Model.Email</h6>
+                                    </div>
+                                </div>
+                                <h6 class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600">Drive Data</h6>
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <p class="m-b-10 f-w-600">Files</p>
+                                        <h6 class="text-muted f-w-400">0</h6>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <p class="m-b-10 f-w-600">Folders</p>
+                                        <h6 class="text-muted f-w-400">0</h6>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
