--- a/NCloud/NCloud/Views/Drive/Details.cshtml
+++ b/NCloud/NCloud/Views/Drive/Details.cshtml
@@ -13,7 +13,7 @@
     </form>
     <div class="d-flex justify-content-between">
         <div class="">
-            <button type="button" class="btn btn-primary"><a asp-controller="Drive" asp-action="Back"><img src="~/utilities/arrow-left-circle.svg" width=" 20" height="20" class="rounded align-middle" /></a></button>
+            <a class=btn btn-primary" asp-controller="Drive" asp-action="Back"><img src="~/utilities/arrow-left-circle.svg" width=" 20" height="20" class="rounded align-middle" /></a>
         </div>
         <div class="">
             <div class="btn-group" role="group">
