tinyMCE implemented, need to make similar adjustments like monaco code editor, for file editing

--- a/NCloud/NCloud/Views/Editor/Index.cshtml
+++ b/NCloud/NCloud/Views/Editor/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model EditorViewModel
+﻿@model CodeEditorViewModel
 
 <script src="_content/BlazorMonaco/jsInterop.js"></script>
 <script src="_content/BlazorMonaco/lib/monaco-editor/min/vs/loader.js"></script>
