--- a/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
+++ b/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
@@ -44,7 +44,7 @@
                         </li>
                         <li class="nav-item my-2">
                             <a href="#" class="align-middle px-0 text-decoration-none text-dark">
-                                <span class="d-inline m-1"><img src="~/utilities/soundwave.svg" width="20" height="20" class="rounded-circle" /></span> <span class="ms-1 d-none d-sm-inline">Music Download</span>
+                                <span class="d-inline m-1"><img src="~/utilities/soundwave.svg" width="20" height="20" class="rounded-circle" /></span> <span class="ms-1 d-none d-sm-inline">Music</span>
                             </a>
                         </li>
                     </ul>
