--- a/NCloud/NCloud/Views/_ViewImports.cshtml
+++ b/NCloud/NCloud/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using NCloud
 @using NCloud.Models
 @using NCloud.ViewModels
+@using NCloud.API
 @using NCloud.Views.Shared.Components
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
