--- a/NCloud/NCloud/Views/Drive/Terminal.cshtml
+++ b/NCloud/NCloud/Views/Drive/Terminal.cshtml
@@ -13,8 +13,8 @@
         <div class="body h-100" id="terminal">
             @*< div id="prev-text" class="w-100"></div>
             <div class="d-inline-flex w-100">
-                <span class="d-inline">Cloudroot/HelloWorld/Macska></span>
-                <input type="text" class="terminalinput d-inline" />
+            <span class="d-inline">Cloudroot/HelloWorld/Macska></span>
+            <input type="text" class="terminalinput d-inline" />
             </div> *@
         </div>
     </div>
@@ -31,7 +31,11 @@
     jQuery(function ($, undefined) {
         $('#terminal').terminal(async function (command) {
             if (command !== '') {
-                var result = await terminal.eval(command,"@Url.Action("Evaluate","Terminal",new { input="@"})");
+                if (command.toLowerCase() === 'exit') {
+                    window.open('@Url.Action("Details","Drive")','_self');
+                    return;
+                }
+                var result = await terminal.eval(command.toLowerCase(), "@Url.Action("Evaluate","Terminal",new { input="@"})");
                 this.echo(result)
             }
         }, {
