--- a/NCloud/NCloud/Views/Account/Index.cshtml
+++ b/NCloud/NCloud/Views/Account/Index.cshtml
@@ -15,7 +15,7 @@
                                 <div class="m-b-25">
                                     <img src="/utilities/person-circle.svg" class="img-radius" alt="User-Profile-Image" width="100" height="100">
                                 </div>
-                                <h6 class="f-w-600 border border-3 border-light rounded-3 py-2">@Model.Fullname</h6>
+                                <h6 class="f-w-600 border border-3 border-light rounded-3 py-2">@Model.FullName</h6>
                             </div>
                         </div>
                         <div class="col-sm-8 bg-dark text-white">
