--- a/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
+++ b/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
@@ -23,12 +23,12 @@
                             </a>
                         </li>
                         <li class="nav-item my-2">
-                            <a asp-controller="Drive" asp-action="Details" asp-route-id="0" class="align-middle px-0 text-decoration-none text-dark">
+                            <a asp-controller="Drive" asp-action="Details" class="align-middle px-0 text-decoration-none text-dark">
                                 <span class="d-inline m-1"><img src="~/utilities/files.svg" width="20" height="20" class="rounded" /></span> <span class="ms-1 d-none d-sm-inline">My Files</span>
                             </a>
                         </li>
                         <li class="nav-item my-2">
-                            <a asp-controller="Drive" asp-action="SharedDetails" asp-route-id="0" class="align-middle px-0 text-decoration-none text-dark">
+                            <a asp-controller="Drive" asp-action="SharedDetails" class="align-middle px-0 text-decoration-none text-dark">
                                 <span class="d-inline m-1"><img src="~/utilities/cloud.svg" width="20" height="20" class="rounded" /></span> <span class="ms-1 d-none d-sm-inline">Shared Files</span>
                             </a>
                         </li>
