--- a/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
+++ b/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
@@ -63,6 +63,9 @@
             </div>
         </div>
     </div>
+    @await Component.InvokeAsync("Notyf")
+    @await Component.InvokeAsync("NToastNotify")
+    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
 <base href="~/" />
