--- a/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
+++ b/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
@@ -63,7 +63,7 @@
             </div>
         </div>
     </div>
-    @await Component.InvokeAsync("Notyf")
+    @* @await Component.InvokeAsync("Notyf") *@
     @await Component.InvokeAsync("NToastNotify")
     @await RenderSectionAsync("Scripts", required: false)
 </body>
