--- a/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
+++ b/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
@@ -18,7 +18,7 @@
                     </a>
                     <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
                         <li class="nav-item my-2">
-                            <a asp-controller="Drive" asp-action="Index" class="align-middle px-0 text-decoration-none text-dark">
+                            <a asp-controller="DashBoard" asp-action="Index" class="align-middle px-0 text-decoration-none text-dark">
                                 <span class="d-inline m-1"><img src="~/utilities/speedometer.svg" width="20" height="20" class="rounded-circle" /></span> <span class="ms-1 d-none d-sm-inline">DashBoard</span>
                             </a>
                         </li>
@@ -28,7 +28,7 @@
                             </a>
                         </li>
                         <li class="nav-item my-2">
-                            <a asp-controller="Drive" asp-action="SharedDetails" class="align-middle px-0 text-decoration-none text-dark">
+                            <a asp-controller="Sharing" asp-action="Details" class="align-middle px-0 text-decoration-none text-dark">
                                 <span class="d-inline m-1"><img src="~/utilities/cloud.svg" width="20" height="20" class="rounded" /></span> <span class="ms-1 d-none d-sm-inline">Shared Files</span>
                             </a>
                         </li>
