--- a/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
+++ b/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="~/NCloud.styles.css" asp-append-version="true" />
 </head>
 <body>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
     <div class="container-fluid">
         <div class="row flex-nowrap">
             <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 background-color border border-dark fixed navwidth">
@@ -63,8 +66,7 @@
             </div>
         </div>
     </div>
-    @await Component.InvokeAsync("Notyf")
-    @await Component.InvokeAsync("NToastNotify")
+    @await Component.InvokeAsync("CloudNotification")
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
