client side libraries added

--- a/NCloud/NCloud/Views/Editor/Index.cshtml
+++ b/NCloud/NCloud/Views/Editor/Index.cshtml
@@ -15,6 +15,12 @@
     <div id="CodeEditor" class="editor-class"></div>
 </div>
 
+@* <div id="loadertoplevel">
+    <div class="loading-box">
+        <div class="loader"></div>
+    </div>
+</div> *@
+
 <link rel="stylesheet"
       data-name="vs/editor/editor.main"
       href="~/lib/monaco-editor/min/vs/editor/editor.main.css" />
@@ -34,5 +40,8 @@
     });
 </script>
 
-
-@* <component type="@typeof(Editor)" render-mode="ServerPrerendered" param-FilePath="@Model.FilePath"/> *@
+@* <script>
+    jQuery(document).ready(function () {
+        jQuery('.loadertoplevel').fadeOut(3000);
+    });
+</script> *@
