--- a/NCloud/NCloud/Views/Terminal/Index.cshtml
+++ b/NCloud/NCloud/Views/Terminal/Index.cshtml
@@ -20,10 +20,9 @@
     </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/jquery"></script>
-<script src="https://cdn.jsdelivr.net/npm/jquery.terminal/js/jquery.terminal.min.js"></script>
+<script src="~/lib/jquery.terminal/js/jquery.terminal.min.js"></script>
 <script src="~/js/terminal.js"></script>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jquery.terminal/css/jquery.terminal.min.css" />
+<link rel="stylesheet" href="~/lib/jquery.terminal/css/jquery.terminal.min.css" />
 
 <script>
     terminal = new TerminalCommand;
