--- a/NCloud/NCloud/wwwroot/css/site.css
+++ b/NCloud/NCloud/wwwroot/css/site.css
@@ -1,6 +1,4 @@
-﻿@import url("navbar.css");
-
-html {
+﻿html {
     font-size: 14px;
 }
 
@@ -145,6 +143,14 @@ details[open] summary:before {
 
 .background-color {
     background: linear-gradient(105.7deg, rgb(0, 238, 179) 23.2%, rgb(49, 100, 255) 100.5%);
+}
+
+.loadertoplevel {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #fff url('images/loader.gif') no-repeat center center;
+    z-index: 9999;
 }
 /*Loader animations end*/
 
