renamed editor pages, remove item thread safe in service, folder also

--- a/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
+++ b/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
@@ -38,18 +38,18 @@
                             </a>
                         </li>
                         <li class="nav-item my-2">
-                            <a asp-controller="Editor" asp-action="Index" class="align-middle px-0 text-decoration-none text-dark">
+                            <a asp-controller="Editor" asp-action="CodeEditor" class="align-middle px-0 text-decoration-none text-dark">
                                 <span class="d-inline m-1"><img src="~/utilities/code-slash.svg" width="20" height="20" class="rounded-circle" /></span> <span class="ms-1 d-none d-sm-inline">Code Editor</span>
                             </a>
                         </li>
                         <li class="nav-item my-2">
-                            <a asp-controller="Editor" asp-action="IndexText" class="align-middle px-0 text-decoration-none text-dark">
+                            <a asp-controller="Editor" asp-action="TextEditor" class="align-middle px-0 text-decoration-none text-dark">
                                 <span class="d-inline m-1"><img src="~/utilities/file-text-fill.svg" width="20" height="20" class="rounded" /></span> <span class="ms-1 d-none d-sm-inline">Text Editor</span>
                             </a>
                         </li>
                         <li class="nav-item my-2">
-                            <a href="#" class="align-middle px-0 text-decoration-none text-dark">
-                                <span class="d-inline m-1"><img src="~/utilities/soundwave.svg" width="20" height="20" class="rounded-circle" /></span> <span class="ms-1 d-none d-sm-inline">Music</span>
+                            <a asp-controller="Terminal" asp-action="Index" class="align-middle px-0 text-decoration-none text-dark">
+                                <span class="d-inline m-1"><img src="~/utilities/terminal.svg" width="20" height="20" class="rounded" /></span> <span class="ms-1 d-none d-sm-inline">Terminal</span>
                             </a>
                         </li>
                     </ul>
